Swagger refactored now authorize is unnecessary
