# docs/swagger.yaml
@@ -37,7 +37,6 @@ definitions:
     type: object
 info:
   contact:
-    email: support@swagger.io
     name: API Support
     url: http://www.swagger.io/support
   description: This is a simple GO API.
@@ -72,8 +71,6 @@ paths:
           description: User with same username or email already exists
           schema:
             type: string
-      security:
-      - BearerAuth: []
       summary: Add a new user
       tags:
       - Users
@@ -100,8 +97,6 @@ paths:
           description: Invalid JSON, wrong password or username
           schema:
             type: string
-      security:
-      - BearerAuth: []
       summary: Check if user exists
       tags:
       - Users
@@ -132,8 +127,6 @@ paths:
           description: User not found
           schema:
             type: string
-      security:
-      - BearerAuth: []
       summary: Delete user
       tags:
       - Users
@@ -158,8 +151,6 @@ paths:
           description: User not found
           schema:
             type: string
-      security:
-      - BearerAuth: []
       summary: Find user by username
       tags:
       - Users
@@ -179,8 +170,6 @@ paths:
           description: Internal server error
           schema:
             type: string
-      security:
-      - BearerAuth: []
       summary: Get all users
       tags:
       - Users
@@ -214,8 +203,6 @@ paths:
           description: User not found
           schema:
             type: string
-      security:
-      - BearerAuth: []
       summary: Login by username or email
       tags:
       - Users
@@ -246,14 +233,7 @@ paths:
           description: User not found
           schema:
             type: string
-      security:
-      - BearerAuth: []
       summary: Update user
       tags:
       - Users
-securityDefinitions:
-  BearerAuth:
-    in: header
-    name: Authorization
-    type: apiKey
 swagger: "2.0"
